# AdventOfCode2022

./: Cargo.toml
advent_launcher/: Cargo.toml
advent_launcher/src/: main.rs
calendar/day1/: Cargo.toml
calendar/day1/src/: lib.rs
calendar/day2/: Cargo.toml
calendar/day2/src/: lib.rs  player_hands.rs  score_calculation.rs
calendar/day3/: Cargo.toml
calendar/day3/src/: input_converter.rs  lib.rs  rucksack.rs
calendar/day4/: Cargo.toml
calendar/day4/src/: lib.rs
calendar/day5/: Cargo.toml
calendar/day5/src/: lib.rs
calendar/day6/: Cargo.toml
calendar/day6/src/: lib.rs
calendar/input-reader/src/: lib.rs
