[package]
name = "advent_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day1 = { path = "../calendar/day1" }
day2 = { path = "../calendar/day2" }
day3 = { path = "../calendar/day3" }
day4 = { path = "../calendar/day4" }
day5 = { path = "../calendar/day5" }
day6 = { path = "../calendar/day6" }